# cpm_ws

./: CMakeLists_template.txt  README.md  cpm_ws_install.py  ws_activate.bat  ws_activate.bat.bak  ws_create.bat  ws_deactivate.bat.bak  ws_devenv.bat
cmake/: cpm_ws.cmake
modules/DiligentGraphics/: DiligentEngine.cmake
modules/DiligentGraphics/DiligentEngine/: CMakeLists.txt
modules/boostorg/: boost.cmake  leaf.cmake
modules/boostorg/boost/: CMakeLists.txt
modules/boostorg/leaf/: CMakeLists.txt
modules/eclipse/: iceoryx.cmake
modules/eclipse/iceoryx/: CMakeLists.txt  duration.inl.patch
modules/loopunit/: lu.cmake
modules/loopunit/lu/: CMakeLists.txt
modules/ocornut/: imgui.cmake
modules/ocornut/imgui/: CMakeLists.txt  patch_CMakeLists.txt
